* 2007-08-01 - marcus.klein@open-xchange.com

 - Bugfix #8410: Changed SQL command for deleting task participants to not use
   if a value is within a set.
 - Bugfix #8253: Fixed NPE in checkConsistency tool.

* 2007-08-01 - francisco.laguna@open-xchange.com

 - Fixed Bug #8630 - Check module permission for multiple module 
   (partial fix for infostore and attachments), note though, there is no
   module permission explicitely for attachments.

* 2007-08-01 - sebastian.kauss@open-xchange.com

 - Fixed Bug #8177 - Statement not closed if inserting reminder fails
 - Fixed Bug #6077 - Redesign of reminder exception handling 
 - Fixed Bug #6990 - Replace JSONException with OXJSONException
 - Fixed Bug #8182 - Deleted objects are not return in modified request

* 2007-08-01 - thorben.betten@open-xchange.com

 - Changed folder's "getUpdatedFolders" query according to HTTP API spec to
   to query all folder GREATER THAN sent timestamp from GUI.
 - Enhanced com.openexchange.tools.stack.Stack interface to offer size()
   method
 - Fixed moving/copying of messages
 - Added module permission check in Multiple servlet's mail request

* 2007-07-31 - francisco.laguna@open-xchange.com

 - Bugfix #8622: Properly URLEncode urls in response to propfind requests.
 - Improving logging
 - Bugfix #8643: Fixed response code for LOCK requests
 - Bugfix #8644: When infostore is disabled, WebDAV is also disabled
 
 
* 2007-07-31 - thorben.betten@open-xchange.com

 - Multiple servlet changed to use JSON objects to create the multiple
   response insterad of using thousands of StringWriter instances
 - Changed SQL query to retrieve user's root folders to include user's
   configuration

* 2007-07-30 - ben.pahne@open-xchange.com

 - New Feature: Email Autocomplete

* 2007-07-30 - sebastian.kauss@open-xchange.com

 - Fixed Bug #4409 - Exception when opening a contact

* 2007-07-30 - thorben.betten@open-xchange.com

 - Bugfix #8525: Fixed missing personal encoding when sending a read