@@ -242,7 +242,7 @@ public class InfostoreIterator implements SearchIterator {
 			category = Category.CODE_ERROR,
 			desc = "An invalid query was sent to the database.",
 			exceptionId = 1,
-			msg = "Invalid SQL Query: %s"
+			msg = "Invalid SQL query: %s"
 	)
 	private void query() {
 		queried = true;
