@@ -1,3 +1,7 @@
+* 2007-08-02 - francisco.laguna@open-xchange.com
+
+ - Bugfix #7936: Changed error messages for infostore and attachments. 
+
 * 2007-08-01 - marcus.klein@open-xchange.com
 
  - Bugfix #8410: Changed SQL command for deleting task participants to not use
